--- a/UI.ui
+++ b/UI.ui
@@ -66,7 +66,7 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="2,1,8">
+     <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="4,1,8">
       <item>
        <widget class="QGroupBox" name="groupBox_2">
         <property name="title">
@@ -87,8 +87,11 @@
            </item>
            <item>
             <widget class="QLineEdit" name="startXY">
+             <property name="cursor">
+              <cursorShape>BlankCursor</cursorShape>
+             </property>
              <property name="alignment">
-              <set>Qt::AlignCenter</set>
+              <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
@@ -108,8 +111,11 @@
            </item>
            <item>
             <widget class="QLineEdit" name="endXY">
+             <property name="cursor">
+              <cursorShape>BlankCursor</cursorShape>
+             </property>
              <property name="alignment">
-              <set>Qt::AlignCenter</set>
+              <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
@@ -129,8 +135,11 @@
            </item>
            <item>
             <widget class="QLineEdit" name="nowXY">
+             <property name="cursor">
+              <cursorShape>BlankCursor</cursorShape>
+             </property>
              <property name="alignment">
-              <set>Qt::AlignCenter</set>
+              <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
@@ -187,6 +196,9 @@
            </colorrole>
           </disabled>
          </palette>
+        </property>
+        <property name="cursor">
+         <cursorShape>BlankCursor</cursorShape>
         </property>
         <property name="styleSheet">
          <string notr="true">font: 24pt &quot;微软雅黑&quot;;</string>
